# pythonProjet10

./: README.md  pyproject.toml
softdesk/: db.sqlite3
softdesk/authentication/: admin.py  forms.py  models.py  permissions.py  serializers.py  views.py
softdesk/authentication/migrations/: 0001_initial.py  0002_alter_myuser_managers_myuser_rgpd_consent.py  0003_alter_myuser_date_of_birth_alter_myuser_rgpd_consent.py  0004_remove_myuser_rgpd_consent_myuser_can_be_contacted_and_more.py
softdesk/projectsmanagement/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  utils.py  views.py
softdesk/projectsmanagement/migrations/: 0001_initial.py  0002_remove_contributor_role_project_author.py  0003_remove_project_contributors_alter_project_author_and_more.py  0004_issue_author_project_type.py  0005_alter_comment_id.py
softdesk/softdesk/: settings.py  urls.py
